# legal-document-search

./: README.md  pyproject.toml
app/: Dockerfile.fastapi  requirements.txt
infrastructure/: .terraform.lock.hcl  configure_kubectl.tf  main.tf  output.tf  providers.tf  variables.tf
infrastructure/aks/: main.tf  output.tf
infrastructure/azure_container_registry/: main.tf  output.tf  variables.tf
infrastructure/milvus/: main.tf  namespace.tf
infrastructure/storage_account/: main.tf
