[tool.poetry]
name = "legal-document-search"
version = "0.1.0"
description = ""
authors = ["Chris Norman"]
readme = "README.md"
packages = [{include = "legal_document_search"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
